# nds3

./: .travis.yml  README.md
CMake/: CMakeLists.txt  git_revision.cmake  parse_version.cmake
doc/examples/CMake/: CMakeLists.txt
include/nds3/: version.h
scripts/: travis-after-success.sh  travis-before-script.sh  travis-script.sh
tests/CMake/: CMakeLists.txt
